# skia_playground

./: CMakeLists.txt  gradient_trace.h  lazer_trace.h  main.cpp  main_2.cpp  path_light_effect.h  path_points_storage.h  point.cpp  point.h  readme.md  rect_animator.h  spark.cpp  spark.h
shaders/: dots_sparks.sksl  good_circle.sksl  good_example.sksl  point_by_circle.sksl
